@@ -31,6 +31,12 @@ var pagetitle = new Ext.XTemplate('<tpl for="."><div class="collections-title-co
     compiled: true
 });
 
+var pagetitleLink = new Ext.XTemplate('<tpl for="."><div class="collections-title-column">'
+    + '<a href="javascript:void(0);" data-id="{id}" data-action="edit" title="Edit {pagetitle}">{pagetitle}</a>'
+    + '</div></tpl>', {
+    compiled: true
+});
+
 var pagetitleWithIcons = new Ext.XTemplate('<tpl for="."><div class="collections-title-column">'
     +'<span class="collections-children-icon x-tree-node-collapsed"><i class="{icons}"></i></span><h3 class="main-column buttons"><a href="javascript:void(0);" data-id="{id}" data-action="edit" title="Edit {pagetitle}">{pagetitle}</a></h3>'
     +'<tpl if="actions">'
@@ -45,6 +51,24 @@ var pagetitleWithIcons = new Ext.XTemplate('<tpl for="."><div class="collections
     +'</div></tpl>',{
     compiled: true
 });
+
+var icons = new Ext.XTemplate('<tpl for=".">'
+    +'<tpl if="actions">'
+    +'<ul class="actions solo">'
+    +'<tpl for="actions">'
+    +'<li><a href="javascript:void(0);" class="controlBtn {className}" title="{text}">'
+    +'<i class="icon icon-fw icon {[ iconClass[values.key] ]}" data-id="{parent.id}" data-action="{values.key}"></i>{[ iconClass[values.key] ? "":values.text ]}'
+    +'</a></li>'
+    +'</tpl>'
+    +'</ul>'
+    +'</tpl>'
+    +'</tpl>',{
+    compiled: true
+});
+
+Collections.renderer.buttons = function(value, metaData, record, rowIndex, colIndex, store) {
+    return icons.apply(record.data);
+};
 
 Collections.renderer.qtip = function(value, metaData, record, rowIndex, colIndex, store) {
     metaData.attr = 'ext:qtip="' + value + '"';
@@ -64,7 +88,7 @@ Collections.renderer.pagetitle = function(value, metaData, record, rowIndex, col
 };
 
 Collections.renderer.pagetitleLink = function(value, metaData, record, rowIndex, colIndex, store) {
-    return '<a href="' + record.data.action_edit + '" title="Edit ' + value + '">' + value + '</a>';
+    return pagetitleLink.apply(record.data);
 };
 
 Collections.renderer.datetimeTwoLines = function(value, metaData, record, rowIndex, colIndex, store) {
