@@ -2,6 +2,8 @@ Changelog for Collections.
 
 Collections 3.4.0
 ===================
+- Add Collections.renderer.buttons renderer
+- Allow snippet renderer on non-existing column
 - Add event names to update from grid processor
 - Show folders under collections
 - Show breadcrumbs when browsing folders under collections
